# synctui

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: client.rs  config.rs  error.rs  lib.rs  main.rs  ty.rs
src/api/: client.rs  mod.rs  types.rs
src/tui/: app.rs  input.rs  mod.rs  popup.rs  state.rs  ui.rs
src/tui/pages/: devices.rs  folders.rs  id.rs  pending.rs
