[package]
name = "synctui"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
dirs = "6.0.0"
env_logger = "0.11.7"
futures = "0.3.31"
log = "0.4.26"
qrcode = { version = "0.14.1", default-features = false }
ratatui = "0.29.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
syncthing-rs = { git = "https://github.com/hertelukas/syncthing-rs.git" }
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
toml = "0.8.20"
tui-qrcode = { git = "https://github.com/joshka/tui-widgets.git", default-features = false }

[profile.release]
lto = true
codegen-units = 1
